2008-05-12  Mark Nauwelaerts  <mnauw@users.sf.net>

	* gst/avi/gstavimux.c: (gst_avi_mux_pad_reset):
	Do not leave fourcc stream header field empty upon reset.
	Fixes #519301.

2008-05-11  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/inspect/plugin-goom.xml:
	* docs/plugins/inspect/plugin-goom2k1.xml:
	* gst/goom/gstgoom.c:
	* gst/goom2k1/gstgoom.c:
	Add goom2k1 into the docs.

2008-05-08  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on patch by: Wouter Cloetens  <wouter at mind be>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_init),
	(gst_rtspsrc_skip_lws), (gst_rtspsrc_unskip_lws),
	(gst_rtspsrc_skip_commas), (gst_rtspsrc_skip_item),
	(gst_rtsp_decode_quoted_string),
	(gst_rtspsrc_parse_digest_challenge), (gst_rtspsrc_parse_auth_hdr),
	(gst_rtspsrc_setup_auth):
	Support Digest authentication. Fixes #532065.

2008-05-08  Stefan Kost  <ensonic@users.sf.net>

	* gst/level/gstlevel.c:
	  Also support 32bit (e.g. whe having it after 'mad'). Add more notes
	  about whats needed for liboil acceleration. Simplify docs a bit.

2008-05-08  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Sjoerd Simons <sjoerd at luon dot net>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_collected):
	Update the track duration if the old one was invalid.
	Fixes bug #532117.

2008-05-07  Ole André Vadla Ravnås  <ole.andre.ravnas at tandberg com>

	* gst/rtp/gstrtph264pay.c (gst_rtp_h264_pay_parse_sps_pps):
	  Use GST_STR_NULL when trying to print sps and pps strings that could
	  be NULL, as this might crash on some platforms.

2008-05-07  Ole André Vadla Ravnås  <ole.andre.ravnas at tandberg com>

	patch by: Haakon Sporsheim <haakon.sporsheim at tandberg com>

	* sys/directdraw/gstdirectdrawsink.c (gst_directdraw_sink_setup_ddraw):
	  Do IDirectDrawClipper_SetHWnd() if the window ID has already been
	  set after creating the clipper.
